# PCB_Preview

./: .gitignore  README.md  build_backend.ps1  build_backend.py  build_windows.ps1  main.js  main.py  output (2) (1).gcode  package-lock.json  package.json  pcb-preview-server.spec  pyproject.toml
.github/workflows/: build.yml  release.yml
esp32/: platformio.ini
esp32/include/: gcode.h  motion.h  wifi_server.h
esp32/src/: Test.code-workspace  gcode.cpp  main.cpp  motion.cpp  wifi_server.cpp
gerbers/: Mini Inverter-F_Cu.gbr  Mini Inverter-F_Mask.gbr  Mini Inverter-F_Paste.gbr  Mini Inverter-F_Silkscreen.gbr
parser/: gcode_generator.py  gerber_preview.py  parse_gerber.py  parser_gerber.py  raster_gcode.py  raster_generator.py  toolpath_generator.py
scripts/: afterPack.js
templates/: preview.html  simulate.html
