[project]
name = "antigravity-pcb-preview"
version = "0.4.0"
description = "Multi-layer Gerber PCB preview and plotter toolchain"
authors = [
    {name = "Shivam Bajaj"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.5"
dependencies = [
    "fastapi (>=0.100.0)",
    "uvicorn[standard] (>=0.20.0)",
    "gerbonara (>=1.6.0)",
    "jinja2 (>=3.1.0)",
    "python-multipart (>=0.0.5)",
]

[project.scripts]
pcb-preview = "parser.gerber_preview:main"

[tool.poetry.group.dev.dependencies]
pyinstaller = ">=6.0.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
